fix-css-legibilty

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,19 +6,21 @@ font-family: 'Dawning of a New Day', cursive;
 h1 {
 	font-family: 'Dawning of a New Day', cursive;
 	font-size: 80px;
+	color: #F5B90C;
+
 }
 
 .clearfix {
-	color: white;
-	font-size: 45px;
+	color: #F5B90C;
+	font-size: 40px;
 }
 
 body {
-	background-image: url(../images/background-image.jpeg);
+	background-image: url(../images/background-2.jpeg);
 	background-size: cover;
 	font-family: 'Amatic SC', cursive;
-	color: #F5B90C;
-	font-size: 50px;
+	font-size: 30px;
+	color: white;
 }
 
 .small {
